polishing up CSS

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <div class="header">
             <ul>
                 <li>
-                    <a href="C:\Users\adieb\general_bootcamp\horiseon_refactoring\images\search-engine-optimization.jpg">Search Engine Optimization</a>
+                    <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li>
-                    <a href="C:\Users\adieb\general_bootcamp\horiseon_refactoring\images\online-reputation-management.jpg">Online Reputation Management</a>
+                    <a href="#online-reputation-management">Online Reputation Management</a>
                 </li>
                 <li>
-                    <a href="C:\Users\adieb\general_bootcamp\horiseon_refactoring\images\social-media-marketing.jpg">Social Media Marketing</a>
+                    <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
         </div>
