fixing css again

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="C:\Users\adieb\general_bootcamp\horiseon_refactoring\style.css">
     <title>Horiseon Social Solutions</title>
 </head>
 
